--- a/PrivateYelp/PrivateYelp/Base.lproj/Main.storyboard
+++ b/PrivateYelp/PrivateYelp/Base.lproj/Main.storyboard
@@ -1,24 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="evU-jL-NTI">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="zoJ-KE-ucg">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="5GJ-P2-0Fo" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Zou-0X-J2Q">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="j6O-lq-bBq">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HMK-Py-gxD">
+                                <rect key="frame" x="20" y="792" width="40" height="40"/>
+                                <state key="normal" image="mapButtonBottomBarSelected"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uRy-Rn-UwU">
+                                <rect key="frame" x="354" y="792" width="40" height="40"/>
+                                <state key="normal" image="myReviewsButtonBottomBarUnselected"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="CdD-VD-sw6" firstAttribute="bottom" secondItem="HMK-Py-gxD" secondAttribute="bottom" constant="30" id="Hd5-wc-Kdi"/>
+                            <constraint firstItem="j6O-lq-bBq" firstAttribute="leading" secondItem="CdD-VD-sw6" secondAttribute="leading" id="cwr-Dq-gJ5"/>
+                            <constraint firstAttribute="bottom" secondItem="j6O-lq-bBq" secondAttribute="bottom" id="gcb-X9-nWG"/>
+                            <constraint firstItem="CdD-VD-sw6" firstAttribute="trailing" secondItem="uRy-Rn-UwU" secondAttribute="trailing" constant="20" id="laj-0k-VvV"/>
+                            <constraint firstItem="j6O-lq-bBq" firstAttribute="top" secondItem="Zou-0X-J2Q" secondAttribute="top" id="nGJ-fw-SbK"/>
+                            <constraint firstItem="CdD-VD-sw6" firstAttribute="bottom" secondItem="uRy-Rn-UwU" secondAttribute="bottom" constant="30" id="q9d-62-kXC"/>
+                            <constraint firstItem="j6O-lq-bBq" firstAttribute="trailing" secondItem="CdD-VD-sw6" secondAttribute="trailing" id="uIR-d1-xRP"/>
+                            <constraint firstItem="HMK-Py-gxD" firstAttribute="leading" secondItem="CdD-VD-sw6" secondAttribute="leading" constant="20" id="uiN-B1-rpH"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="CdD-VD-sw6"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Qjg-Uz-pFC"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yIS-Pi-WT1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1281.1594202898552" y="137.94642857142856"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="eIL-Rd-ETq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="evU-jL-NTI" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hfx-H6-aVR">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="5GJ-P2-0Fo" kind="relationship" relationship="rootViewController" id="OAX-tA-2vV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jQN-2O-vF4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="371.01449275362324" y="137.94642857142856"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="mapButtonBottomBarSelected" width="40" height="40"/>
+        <image name="myReviewsButtonBottomBarUnselected" width="40" height="40"/>
+    </resources>
 </document>
